this corrected my three css files to prevent the carousel images from jumping around

--- a/styles/final_round.css
+++ b/styles/final_round.css
@@ -124,9 +124,8 @@ body {
     color: rgb(255, 251, 2);
 }
 
-#carousel-inner img {
-    width: 256px;
-    height: 400px;
+.carousel-inner img {
+    height: 500px;
  }
 
  #music-albums {
